<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/close_nfcscan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/navigation_color"
        android:text="close"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="149dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nfc_scan" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/scan_nfc_tag_promt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/item_card_view_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="invisible"
                app:cardBackgroundColor="@color/item_card_background"
                app:cardCornerRadius="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:backgroundTint="#00A65959">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/itemcard_image_scan"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginStart="0dp"
                            android:background="@color/item_card_background"
                            android:scaleType="centerCrop"
                            tools:srcCompat="@drawable/baseline_add_circle_outline_24" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/itemcard_header_text_scan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="Create New Item"
                        android:textColor="#49454F"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/itemcard_subheader_text_scan"
                        app:layout_constraintStart_toEndOf="@+id/cardView1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/itemcard_subheader_text_scan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="16dp"
                        android:text=""
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardView1"
                        app:layout_constraintTop_toBottomOf="@+id/itemcard_header_text_scan"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/track_card_view_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="invisible"
                app:cardBackgroundColor="@color/item_card_background"
                app:cardCornerRadius="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:backgroundTint="#00A65959">

                    <TextView
                        android:id="@+id/trackcard_contactname_scan"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="27dp"
                        android:layout_marginTop="24dp"
                        android:text="Contact Name"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/trackcard_daycounter_scan"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/trackcard_daycounter_scan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="+4d"
                        android:textColor="#00AE00"
                        android:textSize="42sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/trackcard_scan_return_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="27dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="24dp"
                        android:text="28.09.2000"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/trackcard_daycounter_scan"
                        app:layout_constraintTop_toBottomOf="@+id/trackcard_contactname_scan" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/return_button"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/scan_button"
                    android:text="return"
                    android:textSize="16sp"
                    app:cornerRadius="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lend_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/lend_button"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/scan_button"
                    android:text="lend"
                    android:textSize="16sp"
                    app:cornerRadius="18dp"
                    app:layout_constraintEnd_toStartOf="@+id/return_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>