<resources>
    <string name="app_name">IteMate</string>

    <!-- Navigation Drawer Strings -->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="nav_first">First Activity</string>
    <string name="nav_second">Second Activity</string>
    <string name="nav_third">Third Activity</string>
    <string name="categories">Categories</string>

    <!-- Bottom Navigation Strings -->
    <string name="home">Home</string>
    <string name="items">Items</string>
    <string name="track">Track</string>
    <string name="menu">Menü</string>

    <!-- Item Detail Card Strings -->
    <string name="contained_items_header">Contained Items:</string>
    <string name="item_detailcard_description">Dieses Item enthält noch keine Beschreibung.</string>
    <string name="associated_items_header">Associated Items:</string>
    <string name="track_detailcard_description">Die Ausleihe wurde bereits digital bezahlt.\nHier kann noch einiger weiterer Unsinn stehen! Das ist doch klar.</string>
    <string name="lent_items_header">Lent Items</string>

    <!-- NFC Scan Strings -->
    <string name="scan_nfc_tag_promt">Move NFC-Tag close to device.</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item_description_hint">Click to add description.</string>
    <string name="new_item_add_title_hint">Add Title</string>
</resources>