...
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Menu Button on the Right -->
        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/menu"
            android:paddingRight="20dp"
...
